# NZCSC20_RevChallenge

./: CMakeLists.txt  README.md
core/Fibre/: CMakeLists.txt
core/Fibre/Private/Header/: Util.h
core/Fibre/Private/Source/: NetConn.cpp  WatchInterface.cpp  Watchdog.cpp
core/Fibre/Public/Header/: NetConn.h  WatchInterface.h  Watchdog.h
core/Fibre/Public/Source/: Fibre.cpp
core/Node/: Dockerfile  app.py  docker-compose.yaml  secret.key
core/Node/templates/: story.html  test.html
core/Solution/: getFlag.py
